tests/miniJava/neg/004198_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends void java { }
